Jann 30/objects/RFA__c.object
<CustomObject>
    <fields>
        <fullName>REP_DaysInPostGroup__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Group Post-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Business Unit Pre-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInGroupPostCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInGroupPostCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInGroupPostCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Post-Group Circulation</inlineHelpText>
        <label>Days In Group Post-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPostKeyOps__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Key Ops Post-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Key Operations Post-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInKeyOpsPostCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInKeyOpsPostCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInKeyOpsPostCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Post-Key Ops Analysis</inlineHelpText>
        <label>Days In Key Operations Post-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPostSeniorExecutive__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Senior Executive Post-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Executive Pre-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInSrExecPostCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInSrExecPostCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInSrExecPostCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Post-Senior Executive Circulation</inlineHelpText>
        <label>Days In SeniorExecutive Post-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPreExecutive__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Executive Pre-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Executive Pre-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInExecutivePreCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInExecutivePreCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInExecutivePreCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Pre-Executive Circulation</inlineHelpText>
        <label>Days In Executive Pre-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPreGroup__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Group Pre-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Group Pre-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInGroupPreCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInGroupPreCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInGroupPreCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Pre-Group Circulation</inlineHelpText>
        <label>Days In Group Pre-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPreKeyOps__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Key Ops Pre-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Key Operations Pre-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInKeyOpsPreCirculation__c ), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInKeyOpsPreCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInKeyOpsPreCirculation__c / (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Pre-Key Ops Circulation</inlineHelpText>
        <label>Days In Key Operations Pre-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPreSeniorExecutive__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Senior Executive Pre-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Senior Executive Pre-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInSrExecPreCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInSrExecPreCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInSrExecPreCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Pre-Senior Executive Circulation</inlineHelpText>
        <label>Days In Senior Executive Pre-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInReturnToSender__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Return to Sender</description>
        <formula>IF( 
(LevelStage__c = &apos;Return To Sender&apos;),
IF(
ISBLANK( TECH_TimeInReturnToSender__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInReturnToSender__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInReturnToSender__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Return to Sender</inlineHelpText>
        <label>Days In Return To Sender</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInSeniorExecutive__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Senior Executive Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Senior Executive Circulation&apos;),
IF(
ISBLANK( TECH_TimeInSrExecCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInSrExecCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInSrExecCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Senior Executive Circulation</inlineHelpText>
        <label>Days In Senior Executive Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratification__c</fullName>
        <inlineHelpText>Ratification means a commitment has been made with another party prior to obtaining all required DOA or LCOA approvals, and TCCC is already either ethically or legally bound to move forward with an arrangement or agreement.</inlineHelpText>
        <label>Ratification?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReportingUnitInformationGuideline__c</fullName>
        <defaultValue>&quot;Reporting Unit (RU) is the legal entity or accounting location that will record the transaction on its accounting books. Select up to three RUs impacted by the exemption from the drop down lists below. For transactions involving only one RU, populate only the Primary Reporting Unit field. Describe ALL RUs, including any additional RUs (e.g. 4th, 5th, etc. RUs) covered by the request in the Request Summary above.&quot;</defaultValue>
        <label>Reporting Unit Information Guideline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestAmountFunctionalCurrency__c</fullName>
        <inlineHelpText>TCCC portion only. Request Amt is based on DOA/LCOA financial parameters e.g., Forecasted Contractual Spend, Financial Commitment, Impairment amt, etc.</inlineHelpText>
        <label>Request Amount (FC) *</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestAmountUSD__c</fullName>
        <formula>RequestAmountFunctionalCurrency__c *ARERate__c</formula>
        <inlineHelpText>TCCC portion only. Request Amt is based on DOA/LCOA financial parameters e.g., Forecasted Contractual Spend, Financial Commitment, Impairment amt, etc.</inlineHelpText>
        <label>Request Amount (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestTitle__c</fullName>
        <inlineHelpText>A concise description of the transaction, which is written as a phrase.  (e.g.,  Write-off  45 non-working vending machines in Atlanta sales center)</inlineHelpText>
        <label>Request Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Justification_Guidelines__c</fullName>
        <defaultValue>&quot;The Request Justification should be sufficient to gain management alignment and approval. Include the following as relevant:&quot; +BR()+ BR()+


&quot;Objectives / Rationale/ Background&quot; +BR()+
&quot;- Describe objectives and rationale, including problem or opportunity we are solving and the proposed solution / desired outcome.&quot; +BR()+
&quot;- Describe background (include the Company history, whether the request is a renewal, and identify any relevant third parties.)&quot; +BR()+
&quot;- Describe the specific request to be approved including terms.&quot;+BR()+BR()+

&quot;Risk &amp; Compensating Controls&quot;+BR()+
&quot;- Identify the existing controls which are impacted by this request.&quot;+BR()+
&quot;- Describe in detail any mitigating controls in place which mitigate risk associated with the request.&quot; +BR()+BR()+

&quot;Financial Impact&quot;+BR()+
&quot;- Detail any estimated costs and expenses, including OPEX, DME, and CAPEX.&quot;+BR()+
&quot;- Provide an analysis of overall financial and economic impact (example, NPV/IRR, payback, and EP), including underlying assumptions.&quot; +BR()+
&quot;- Provide financial impact in terms of U.S. Dollar.&quot;</defaultValue>
        <label>Request Justification Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Summary_Guidelines__c</fullName>
        <defaultValue>&quot;Provide a concise, high-level description of the requested exemption which sufficiently summarizes all key components of the request. Include the following to the extent relevant: the Key Objectives/ Background/ Rationale; if more than three, the reporting units included in this request; and other key considerations.&quot;</defaultValue>
        <description>Request Summary Guidelines</description>
        <label>Request Summary Guideline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Summary__c</fullName>
        <inlineHelpText>Refer to ‘Request Summary Guidelines’ above</inlineHelpText>
        <label>Request Summary *</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReturnReason__c</fullName>
        <description>Comments to be entered by a Location Coordinator or Capital Management team member when an RFA is placed into Return to Sender Stage.</description>
        <label>Return Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Compensating_Controls__c</fullName>
        <label>Risk &amp; Compensating Controls *</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Compensating__c</fullName>
        <label>Risk &amp; Compensating Controls Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SecondDOACategorySubCategory__c</fullName>
        <inlineHelpText>This field allows the RFA Creator to select up to 3  DOA Categories that apply to the requested transaction.</inlineHelpText>
        <label>Second DOA Category / Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>1.A.1	Capital Expenditures - Annual Capital Plan Request or Formal Approval of Annual Capital Plan Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.a	Capital Expenditures - Unbudgeted CPR or SPR Covered by Budget Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.b	Capital Expenditures - Unbudgeted CPR or SPR Funded Partially or Fully from Corporate Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.3	Capital Expenditures - Increase or Scope Change to Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.4	Capital Expenditures - Transfer of Capital Budget across Groups for a Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.5	Capital Expenditures - Foreign Exchange Fluctuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.8	Capital Expenditures - Advance Appropriations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.B	Capital Expenditures - Capability and Performance Programs (CAPPrs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.C	Capital Expenditures - Bottles and Cases, Including Overages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.	IT Investments and Website Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.A	Real Property -  Acquisitions and Sales or Other Disposals of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.B	Real Property -  Donations of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.C	Real Property - Condemnations or Easements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.A	Leases - Operating Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.B	Leases - Capital Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.A	Inventory Adjustments and Disposals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.B	Other Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.C	Asset Transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.D	Asset Disposals (Tangible Assets excluding Real Property and Inventory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.A	Treasury - Banking Information Reports (BIR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.B	Treasury - External Borrowings and Lines of Credit (RFFs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.C	Treasury - Intercompany Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.D	Treasury - Loans Third Parties (Including CCFC Target Loan Programs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.1	Treasury - Guarantees to Third Parties - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.2	Treasury - Guarantees Related to Tax Disputes or Other Matters Involving Governmental Bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.F	Treasury - Comfort Letters and Other Financial Security Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.G	Treasury - Accommodation Purchases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.H	Treasury - Credit Terms/Policies or Incentives for Sales to Customers, Bottlers or Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.1	Treasury - Exemption from Bad Debt Reserve Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.2	Treasury - Write-offs of Uncollectible Accounts Receivable from Bad Debt Reserve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondReportingUnitName__c</fullName>
        <formula>SecondReportingUnitNumber__r.Reporting_Unit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically assigned based on the reporting unit # selected.</inlineHelpText>
        <label>Second Reporting Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondReportingUnitNumberName__c</fullName>
        <formula>SecondReportingUnitNumber__r.Name + &quot; - &quot; + SecondReportingUnitNumber__r.Reporting_Unit_Name__c</formula>
        <label>Second Reporting Unit Number/Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondReportingUnitNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A four-digit code that is the lowest level at which consolidation occurs. Same as Co. code and is either a legal entity or an acctg. location (e.g., 0101 - North America). Select the reporting unit(s) recording the transaction.</inlineHelpText>
        <label>Second Reporting Unit #</label>
        <referenceTo>ReportingUnit__c</referenceTo>
        <relationshipLabel>RFA (Secondary Reporting Unit Number)</relationshipLabel>
        <relationshipName>RFA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeniorExecutiveApprovers__c</fullName>
        <inlineHelpText>The number of approvers at the Senior Executive Circulation stage</inlineHelpText>
        <label>Senior Executive Approvers</label>
        <summaryFilterItems>
            <field>RFAUserRole__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Approver</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RFAUserRole__c.Level__c</field>
            <operation>equals</operation>
            <value>6. Senior Executive</value>
        </summaryFilterItems>
        <summaryForeignKey>RFAUserRole__c.RFA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>Automatically assigned by the RFA database based upon the stage of the RFA approval.</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Circulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Circulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>RFA R1 - To store the subject of the Completion Memo</description>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TECH_LastStatusChangeDate__c</fullName>
        <description>RFA R1 - This Date-Time field will track the Date and Time when the RFA Level/stage has been changed</description>
        <label>TECH_LastStatusChangeDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInBUCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Business Unit Circulation</description>
        <label>TECH_TimeInBUCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInBUPostCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Business Unit Post-Circulation</description>
        <label>TECH_TimeInBUPostCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInBUPreCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Business Unit Pre-Circulation</description>
        <label>TECH_TimeInBUPreCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInCapMgmtHold__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Capital Management Hold</description>
        <label>TECH_TimeInCapMgmtHold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInCorporateCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Corporate Circulation</description>
        <label>TECH_TimeInCorporateCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInCorporatePostCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Corporate Post-Circulation</description>
        <label>TECH_TimeInCorporatePostCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInCorporatePreCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Corporate Pre-Circulation</description>
        <label>TECH_TimeInCorporatePreCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInDraft__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Draft</description>
        <label>TECH_TimeInDraft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInExecutiveCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Executive Circulation</description>
        <label>TECH_TimeInExecutiveCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInExecutivePostCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Executive Post-Circulation</description>
        <label>TECH_TimeInExecutivePostCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInExecutivePreCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Executive Pre-Circulation</description>
        <label>TECH_TimeInExecutivePreCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInGroupCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Group Circulation</description>
        <label>TECH_TimeInGroupCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInGroupPostCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Group Post-Circulation</description>
        <label>TECH_TimeInGroupPostCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInGroupPreCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Group Pre-Circulation</description>
        <label>TECH_TimeInGroupPreCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInKeyOpsCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Key Operations Circulation</description>
        <label>TECH_TimeInKeyOpsCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInKeyOpsPostCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Key Operations Post-Circulation</description>
        <label>TECH_TimeInKeyOpsPostCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInKeyOpsPreCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Key Operations Pre-Circulation</description>
        <label>TECH_TimeInKeyOpsPreCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInPendBoardReview__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Pending Board Review</description>
        <label>TECH_TimeInPendBoardReview</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInReturnToSender__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Return To Sender</description>
        <label>TECH_TimeInReturnToSender</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInSrExecCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Senior Executive Circulation</description>
        <label>TECH_TimeInSrExecCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInSrExecPostCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Senior Executive Post-Circulation</description>
        <label>TECH_TimeInSrExecPostCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInSrExecPreCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Senior Executive Pre-Circulation</description>
        <label>TECH_TimeInSrExecPreCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>Tax Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TermoftheAgreementYears__c</fullName>
        <inlineHelpText>The length of the CAPPrs agreement.</inlineHelpText>
        <label>Term of the Agreement (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Theapprovalstatusofyourrequestis__c</fullName>
        <description>Approval Status of the RFA Request</description>
        <inlineHelpText>Displays the approval status of the RFA (unconditionally approved, conditionally approved, etc.)</inlineHelpText>
        <label>This request has been</label>
        <picklist>
            <picklistValues>
                <fullName>Unconditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed / Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected / Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thefollowingitem__c</fullName>
        <inlineHelpText>Select level/stage the RFA was approved through according to the DOA/LCOA.</inlineHelpText>
        <label>This request was circulated to</label>
        <picklist>
            <picklistValues>
                <fullName>Key Operation level for approval and/or for information only as required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit level for approval and/or for information only as required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group level for approval and/or for information only as required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate level for approval and/or for information only as required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive level for approval and/or for information only as required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive level for approval and/or for information only as required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The appropriate Board of Directors for approval as required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>